2011-06-21  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Dirk Schulze.

        [GTK] r89314 caused several shadow tests to start failing
        https://bugs.webkit.org/show_bug.cgi?id=63045

        * platform/gtk/Skipped: Unskip tests that are now passing.

2011-06-21  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: [Chromium] Remove old (aggregating) heap profiler.
        https://bugs.webkit.org/show_bug.cgi?id=63049

        * inspector/profiler/detailed-heapshots-test.js:

2011-06-21  Dirk Schulze  <krit@webkit.org>

        Reviewed by Rob Buis.

        SVG no fallback to discrete animation on attribute 'values' for SVGString
        https://bugs.webkit.org/show_bug.cgi?id=57085
        
        Added new test to check fallback to discrete animations on string values. One
        test needed rebaseline. Even if we do not pass the test it is still a progression. 

        * platform/mac/svg/W3C-SVG-1.1/animate-elem-31-t-expected.png:
        * platform/mac/svg/W3C-SVG-1.1/animate-elem-31-t-expected.txt:
        * svg/animations/script-tests/svgstring-animation-fallback-to-discrete.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):
        * svg/animations/svgstring-animation-fallback-to-discrete-expected.txt: Added.
        * svg/animations/svgstring-animation-fallback-to-discrete.html: Added.

2011-06-21  Matthew Delaney  <mdelaney@apple.com>

        Reviewed by Simon Fraser.

        Adding version of fast/events/offsetX-offsetY.html without text run or line height deps
        https://bugs.webkit.org/show_bug.cgi?id=63073

        * fast/events/document-elementFromPoint-expected.txt: Added.
        * fast/events/document-elementFromPoint.html: Added.

2011-06-21  Stephen White  <senorblanco@chromium.org>

        Unreviewed.

        Remove a now-passing test from chromium's text_expectations.  Also 