@@ -27,7 +27,6 @@ module storage {
 
     interface [
         Conditional=INDEXED_DATABASE,
-        LegacyDefaultOptionalArguments,
     ] IDBCursor {
         const unsigned short NEXT = 0;
         const unsigned short NEXT_NO_DUPLICATE = 1;
